infrastracture/application/kafka/60kafka-manager.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      containers:
      - name: kafka-manager
        image: solsson/kafka-manager@sha256:5db7d54cdb642ec5a92f37a869fdcf2aa479b2552e900b2d2b83b38a1806c2de
        ports:
        - containerPort: 9000
        command:
        - ./bin/kafka-manager
        - -Dhttp.port=9000
