infrastracture/application/kafka/70kafka-manager-service.yml
kind: Service
apiVersion: v1
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  selector:
    app: kafka-manager
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
